// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <ul
      class="sc-dFtzdE sc-gIDmry hxYMhq bPSHLF sc-evcjBb iDGNVB"
    >
      <li>
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
        >
          You can put 
          <a
            class="sc-eGRTUG hyiPSP sc-ctqRej UpykM"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
        >
          Multiline text
          <div
            class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <ol
      class="sc-dFtzdE sc-brSwnh hxYMhq la-dWaP sc-evcjBb iDGNVB"
    >
      <li>
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
        >
          You can put 
          <a
            class="sc-eGRTUG hyiPSP sc-ctqRej UpykM"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
        >
          Multiline text
          <div
            class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
